@@ -47,6 +47,7 @@ WGX_I18N_RESOURCE_ENTRY i18n_table[] = {
     {0, "QUICK_OPTIMIZE",           L"&Quick optimization",      NULL},
     {0, "FULL_OPTIMIZE",            L"&Full optimization",       NULL},
     {0, "OPTIMIZE_MFT",             L"&Optimize MFT",            NULL},
+    {0, "PAUSE",                    L"&Pause",                   NULL},
     {0, "STOP",                     L"&Stop",                    NULL},
     {0, "REPEAT_ACTION",            L"Re&peat action",           NULL},
     {0, "SKIP_REMOVABLE_MEDIA",     L"Skip removable &media",    NULL},
@@ -160,6 +161,7 @@ struct menu_item menu_items[] = {
     {IDM_QUICK_OPTIMIZE,          "QUICK_OPTIMIZE",           "F7"    },
     {IDM_FULL_OPTIMIZE,           "FULL_OPTIMIZE",            "Ctrl+F7"},
     {IDM_OPTIMIZE_MFT,            "OPTIMIZE_MFT",             "Shift+F7"},
+    {IDM_PAUSE,                   "PAUSE",                    "Space"},
     {IDM_STOP,                    "STOP",                     "Ctrl+C"},
     {IDM_REPEAT_ACTION,           "REPEAT_ACTION",            "Shift+R"},
     {IDM_IGNORE_REMOVABLE_MEDIA,  "SKIP_REMOVABLE_MEDIA",     "Ctrl+M"},
